--- a/src/css/about.css
+++ b/src/css/about.css
@@ -117,6 +117,7 @@
 /*==========DESKTOP==============*/
 @media screen and (min-width: 1280px) {
   .container-about {
+    padding-top: 70px;
     flex-direction: row;
     gap: 50px;
   }
